fix layout issue with article content styles

--- a/source/stylesheets/partials/_research-detail.scss
+++ b/source/stylesheets/partials/_research-detail.scss
@@ -1,4 +1,4 @@
-article {
+article.research-group {
   .breadcrumb {
     margin-bottom: em(40);
   }
